native/include/gstp_player.h

typedef int64_t GstpPlayerId;
typedef void (*GstpEventCallback)(void *ctx, int32_t kind, int64_t position_ms,
                                  int64_t duration_ms, int32_t width,
                                  int32_t height, int32_t buffering_percent,
                                  int32_t state, const char *message,
                                  double fps, int32_t par_n, int32_t par_d,
                                  int32_t dar_n, int32_t dar_d, bool interlaced,
                                  const char *color_matrix,
                                  const char *color_range,
                                  const char *hdr_format, bool is_seekable);
/** Called when [gstp_init_async] finishes; [code] is [GSTP_ERR_*]. */
typedef void (*GstpInitDoneFn)(void *ctx, int32_t code);
GSTP_EXPORT const char *gstp_version(void);
GSTP_EXPORT int32_t gstp_init(void);
/**
 * Starts runtime init on a background thread (does not block the caller).
 * Invokes [cb] once finished. Concurrent [gstp_init] waits on the same gate.
 * If already initialized, [cb] is invoked immediately on the calling thread.
 */
GSTP_EXPORT void gstp_init_async(GstpInitDoneFn cb, void *ctx);
GSTP_EXPORT void gstp_shutdown(void);
GSTP_EXPORT GstpPlayerId gstp_player_create(void);
GSTP_EXPORT void gstp_player_dispose(GstpPlayerId id);
GSTP_EXPORT void gstp_player_set_event_callback(GstpPlayerId id, void *ctx,
                                                GstpEventCallback cb);
GSTP_EXPORT int32_t gstp_player_load_uri(GstpPlayerId id, const char *uri,
                                         bool auto_play);
GSTP_EXPORT int32_t gstp_player_load_asset(GstpPlayerId id,
                                           const char *asset_key,
                                           const char *package,
                                           const uint8_t *bytes, uint32_t len,
                                           bool auto_play);
GSTP_EXPORT int32_t gstp_player_play(GstpPlayerId id);
GSTP_EXPORT int32_t gstp_player_pause(GstpPlayerId id);
GSTP_EXPORT int32_t gstp_player_stop(GstpPlayerId id);
GSTP_EXPORT int32_t gstp_player_seek(GstpPlayerId id, int64_t position_ms);
GSTP_EXPORT int32_t gstp_player_set_volume(GstpPlayerId id, double volume);
GSTP_EXPORT int32_t gstp_player_set_mute(GstpPlayerId id, bool mute);
GSTP_EXPORT int32_t gstp_player_set_speed(GstpPlayerId id, double speed);
GSTP_EXPORT int32_t gstp_player_set_looping(GstpPlayerId id, bool looping);
GSTP_EXPORT int32_t gstp_player_get_capabilities(GstpPlayerId id, bool *seek,
                                                 bool *tracks,
                                                 bool *orientation);
GSTP_EXPORT int32_t gstp_player_get_track_count(GstpPlayerId id);
GSTP_EXPORT int32_t gstp_player_get_track(GstpPlayerId id, int32_t index,
                                          int32_t *out_id, int32_t *out_type,
                                          char *language, uint32_t language_len,
                                          char *label, uint32_t label_len,
                                          bool *selected);
GSTP_EXPORT int32_t gstp_player_select_track(GstpPlayerId id, int32_t track_id,
                                             int32_t track_type, bool enable);
GSTP_EXPORT int32_t gstp_player_set_video_rotation(GstpPlayerId id,
                                                   int32_t rotate_degrees);
GSTP_EXPORT int32_t gstp_player_set_aspect_ratio_mode(GstpPlayerId id,
                                                      int32_t mode);
/** Android: cache ANativeWindow pointer (as intptr) from JNI thread. */
GSTP_EXPORT void gstp_player_notify_android_surface(GstpPlayerId id,
                                                    int64_t native_window,
                                                    int32_t width,
                                                    int32_t height);