lib/src/ffi/gstp_bindings.dart

// ignore_for_file: always_specify_types, type_annotate_public_apis
// ignore_for_file: camel_case_types, non_constant_identifier_names
// ignore_for_file: unused_element, constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for gstplayer native C ABI.
class GstpBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  GstpBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  GstpBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  ffi.Pointer<ffi.Char> gstp_version() {
    return _gstp_version();
  }

  late final _gstp_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'gstp_version',
      );
  late final _gstp_version = _gstp_versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  int gstp_init() {
    return _gstp_init();
  }

  late final _gstp_initPtr = _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
    'gstp_init',
  );
  late final _gstp_init = _gstp_initPtr.asFunction<int Function()>();

  void gstp_init_async(GstpInitDoneFn cb, ffi.Pointer<ffi.Void> ctx) {
    return _gstp_init_async(cb, ctx);
  }

  late final _gstp_init_asyncPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(GstpInitDoneFn, ffi.Pointer<ffi.Void>)
        >
      >('gstp_init_async');
  late final _gstp_init_async = _gstp_init_asyncPtr
      .asFunction<void Function(GstpInitDoneFn, ffi.Pointer<ffi.Void>)>();

  void gstp_shutdown() {
    return _gstp_shutdown();
  }

  late final _gstp_shutdownPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('gstp_shutdown');
  late final _gstp_shutdown = _gstp_shutdownPtr.asFunction<void Function()>();

  int gstp_player_create() {
    return _gstp_player_create();
  }

  late final _gstp_player_createPtr =
      _lookup<ffi.NativeFunction<GstpPlayerId Function()>>(
        'gstp_player_create',
      );
  late final _gstp_player_create = _gstp_player_createPtr
      .asFunction<int Function()>();

  void gstp_player_dispose(int id) {
    return _gstp_player_dispose(id);
  }

  late final _gstp_player_disposePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(GstpPlayerId)>>(
        'gstp_player_dispose',
      );
  late final _gstp_player_dispose = _gstp_player_disposePtr
      .asFunction<void Function(int)>();

  void gstp_player_set_event_callback(
    int id,
    ffi.Pointer<ffi.Void> ctx,
    GstpEventCallback cb,
  ) {
    return _gstp_player_set_event_callback(id, ctx, cb);
  }

  late final _gstp_player_set_event_callbackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            GstpPlayerId,
            ffi.Pointer<ffi.Void>,
            GstpEventCallback,
          )
        >
      >('gstp_player_set_event_callback');
  late final _gstp_player_set_event_callback =
      _gstp_player_set_event_callbackPtr
          .asFunction<
            void Function(int, ffi.Pointer<ffi.Void>, GstpEventCallback)
          >();

  int gstp_player_load_uri(int id, ffi.Pointer<ffi.Char> uri, bool auto_play) {
    return _gstp_player_load_uri(id, uri, auto_play);
  }

  late final _gstp_player_load_uriPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(GstpPlayerId, ffi.Pointer<ffi.Char>, ffi.Bool)
        >
      >('gstp_player_load_uri');
  late final _gstp_player_load_uri = _gstp_player_load_uriPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Char>, bool)>();

  int gstp_player_load_asset(
    int id,
    ffi.Pointer<ffi.Char> asset_key,
    ffi.Pointer<ffi.Char> package,
    ffi.Pointer<ffi.Uint8> bytes,
    int len,
    bool auto_play,
  ) {
    return _gstp_player_load_asset(
      id,
      asset_key,
      package,
      bytes,
      len,
      auto_play,
    );
  }

  late final _gstp_player_load_assetPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            GstpPlayerId,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Uint32,
            ffi.Bool,
          )
        >
      >('gstp_player_load_asset');
  late final _gstp_player_load_asset = _gstp_player_load_assetPtr
      .asFunction<
        int Function(
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint8>,
          int,
          bool,
        )
      >();

  int gstp_player_play(int id) {
    return _gstp_player_play(id);
  }

  late final _gstp_player_playPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(GstpPlayerId)>>(
        'gstp_player_play',
      );
  late final _gstp_player_play = _gstp_player_playPtr
      .asFunction<int Function(int)>();

  int gstp_player_pause(int id) {
    return _gstp_player_pause(id);
  }

  late final _gstp_player_pausePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(GstpPlayerId)>>(
        'gstp_player_pause',
      );
  late final _gstp_player_pause = _gstp_player_pausePtr
      .asFunction<int Function(int)>();

  int gstp_player_stop(int id) {
    return _gstp_player_stop(id);
  }

  late final _gstp_player_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(GstpPlayerId)>>(
        'gstp_player_stop',
      );
  late final _gstp_player_stop = _gstp_player_stopPtr
      .asFunction<int Function(int)>();

  int gstp_player_seek(int id, int position_ms) {
    return _gstp_player_seek(id, position_ms);
  }

  late final _gstp_player_seekPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(GstpPlayerId, ffi.Int64)>>(
        'gstp_player_seek',
      );
  late final _gstp_player_seek = _gstp_player_seekPtr
      .asFunction<int Function(int, int)>();

  int gstp_player_set_volume(int id, double volume) {
    return _gstp_player_set_volume(id, volume);
  }

  late final _gstp_player_set_volumePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(GstpPlayerId, ffi.Double)>>(
        'gstp_player_set_volume',
      );
  late final _gstp_player_set_volume = _gstp_player_set_volumePtr
      .asFunction<int Function(int, double)>();

  int gstp_player_set_mute(int id, bool mute) {
    return _gstp_player_set_mute(id, mute);
  }

  late final _gstp_player_set_mutePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(GstpPlayerId, ffi.Bool)>>(
        'gstp_player_set_mute',
      );
  late final _gstp_player_set_mute = _gstp_player_set_mutePtr
      .asFunction<int Function(int, bool)>();

  int gstp_player_set_speed(int id, double speed) {
    return _gstp_player_set_speed(id, speed);
  }

  late final _gstp_player_set_speedPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(GstpPlayerId, ffi.Double)>>(
        'gstp_player_set_speed',
      );
  late final _gstp_player_set_speed = _gstp_player_set_speedPtr
      .asFunction<int Function(int, double)>();

  int gstp_player_set_looping(int id, bool looping) {
    return _gstp_player_set_looping(id, looping);
  }

  late final _gstp_player_set_loopingPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(GstpPlayerId, ffi.Bool)>>(
        'gstp_player_set_looping',
      );
  late final _gstp_player_set_looping = _gstp_player_set_loopingPtr
      .asFunction<int Function(int, bool)>();

  int gstp_player_get_capabilities(
    int id,
    ffi.Pointer<ffi.Bool> seek,
    ffi.Pointer<ffi.Bool> tracks,
    ffi.Pointer<ffi.Bool> orientation,
  ) {
    return _gstp_player_get_capabilities(id, seek, tracks, orientation);
  }

  late final _gstp_player_get_capabilitiesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            GstpPlayerId,
            ffi.Pointer<ffi.Bool>,
            ffi.Pointer<ffi.Bool>,
            ffi.Pointer<ffi.Bool>,
          )
        >
      >('gstp_player_get_capabilities');
  late final _gstp_player_get_capabilities = _gstp_player_get_capabilitiesPtr
      .asFunction<
        int Function(
          int,
          ffi.Pointer<ffi.Bool>,
          ffi.Pointer<ffi.Bool>,
          ffi.Pointer<ffi.Bool>,
        )
      >();

  int gstp_player_get_track_count(int id) {
    return _gstp_player_get_track_count(id);
  }

  late final _gstp_player_get_track_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(GstpPlayerId)>>(
        'gstp_player_get_track_count',
      );
  late final _gstp_player_get_track_count = _gstp_player_get_track_countPtr
      .asFunction<int Function(int)>();

  int gstp_player_get_track(
    int id,
    int index,
    ffi.Pointer<ffi.Int32> out_id,
    ffi.Pointer<ffi.Int32> out_type,
    ffi.Pointer<ffi.Char> language,
    int language_len,
    ffi.Pointer<ffi.Char> label,
    int label_len,
    ffi.Pointer<ffi.Bool> selected,
  ) {
    return _gstp_player_get_track(
      id,
      index,
      out_id,
      out_type,
      language,
      language_len,
      label,
      label_len,
      selected,
    );
  }

  late final _gstp_player_get_trackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            GstpPlayerId,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint32,
            ffi.Pointer<ffi.Char>,
            ffi.Uint32,
            ffi.Pointer<ffi.Bool>,
          )
        >
      >('gstp_player_get_track');
  late final _gstp_player_get_track = _gstp_player_get_trackPtr
      .asFunction<
        int Function(
          int,
          int,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Bool>,
        )
      >();

  int gstp_player_select_track(
    int id,
    int track_id,
    int track_type,
    bool enable,
  ) {
    return _gstp_player_select_track(id, track_id, track_type, enable);
  }

  late final _gstp_player_select_trackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(GstpPlayerId, ffi.Int32, ffi.Int32, ffi.Bool)
        >
      >('gstp_player_select_track');
  late final _gstp_player_select_track = _gstp_player_select_trackPtr
      .asFunction<int Function(int, int, int, bool)>();

  int gstp_player_set_video_rotation(int id, int rotate_degrees) {
    return _gstp_player_set_video_rotation(id, rotate_degrees);
  }

  late final _gstp_player_set_video_rotationPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(GstpPlayerId, ffi.Int32)>>(
        'gstp_player_set_video_rotation',
      );
  late final _gstp_player_set_video_rotation =
      _gstp_player_set_video_rotationPtr.asFunction<int Function(int, int)>();

  int gstp_player_set_aspect_ratio_mode(int id, int mode) {
    return _gstp_player_set_aspect_ratio_mode(id, mode);
  }

  late final _gstp_player_set_aspect_ratio_modePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(GstpPlayerId, ffi.Int32)>>(
        'gstp_player_set_aspect_ratio_mode',
      );
  late final _gstp_player_set_aspect_ratio_mode =
      _gstp_player_set_aspect_ratio_modePtr
          .asFunction<int Function(int, int)>();

  /// Android: cache ANativeWindow pointer (as intptr) from JNI thread.
  void gstp_player_notify_android_surface(
    int id,
    int native_window,
    int width,
    int height,
  ) {
    return _gstp_player_notify_android_surface(
      id,
      native_window,
      width,
      height,
    );
  }
